--- a/OnlineOrdering/MainApp/static/css/checkout.css
+++ b/OnlineOrdering/MainApp/static/css/checkout.css
@@ -1,279 +1,317 @@
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 html,
 body {
-  font-family: 'Montserrat', sans-serif;
-  font-size-adjust: u
-  display: flex;
+  min-height: 100%;
+  font-family: 'Open sans', sans-serif;
+}
+
+body {
+  background: linear-gradient(50deg, #f3c680, #a1e3e2);
+}
+
+/*--------------------
+Buttons
+--------------------*/
+.btn {
+  display: block;
+  background: #bded7d;
+  color: white;
+  text-decoration: none;
+  margin: 20px 0;
+  padding: 15px 15px;
+  border-radius: 5px;
+  position: relative;
+}
+.btn::after {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background: #eeeeee;
-  justify-content: center;
-  align-items: center;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  box-shadow: inset 0 3px 0 rgba(0, 0, 0, 0), 0 3px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
 }
-.checkout-panel {
-  display: flex;
-  flex-direction: column;
-  width: 940px;
-  height: 766px;
-  background-color: rgb(255, 255, 255);
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .2);
-}
-.panel-body {
-  padding: 45px 80px 0;
-  flex: 1;
+.btn:hover::after {
+  background: rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 3px 0 rgba(0, 0, 0, 0.2);
 }
 
-.title {
-  font-weight: 700;
-  margin-top: 0;
-  margin-bottom: 40px;
-  color: #2e2e2e;
-}
-.progress-bar {
-  display: flex;
-  margin-bottom: 50px;
-  justify-content: space-between;
-}
-
-.step {
-  box-sizing: border-box;
+/*--------------------
+Form
+--------------------*/
+.form fieldset {
+  border: none;
+  padding: 0;
+  padding: 10px 0;
   position: relative;
-  z-index: 1;
+  clear: both;
+}
+.form fieldset.fieldset-expiration {
+  float: left;
+  width: 60%;
+}
+.form fieldset.fieldset-expiration .select {
+  width: 84px;
+  margin-right: 12px;
+  float: left;
+}
+.form fieldset.fieldset-ccv {
+  clear: none;
+  float: right;
+  width: 86px;
+}
+.form fieldset label {
   display: block;
-  width: 25px;
-  height: 25px;
-  margin-bottom: 30px;
-  border: 4px solid #fff;
-  border-radius: 50%;
-  background-color: #efefef;
+  text-transform: uppercase;
+  font-size: 11px;
+  color: rgba(0, 0, 0, 0.6);
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-family: Inconsolata;
 }
-
-.step:after {
-  position: absolute;
-  z-index: -1;
-  top: 5px;
-  left: 22px;
-  width: 225px;
-  height: 6px;
-  content: '';
-  background-color: #efefef;
+.form fieldset input,
+.form fieldset .select {
+  width: 100%;
+  height: 38px;
+  color: #333333;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 15px;
+  outline: none !important;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2);
 }
-
-.step:before {
-  color: #2e2e2e;
-  position: absolute;
-  top: 40px;
-}
-
-.step:last-child:after {
-  content: none;
-}
-
-.step.active {
-  background-color: #1abc9c;
-}
-.step.active:after {
-  background-color: #1abc9c;
-}
-.step.active:before {
-  color: #1abc9c;
-}
-.step.active + .step {
-  background-color: #1abc9c;
-}
-.step.active + .step:before {
-  color: #1abc9c;
-}
-
-.step:nth-child(1):before {
-  content: 'Cart';
-}
-.step:nth-child(2):before {
-  right: -40px;
-  content: 'Confirmation';
-}
-.step:nth-child(3):before {
-  right: -30px;
-  content: 'Payment';
-}
-.step:nth-child(4):before {
-  right: 0;
-  content: 'Finish';
-}
-.payment-method {
-  display: flex;
-  margin-bottom: 60px;
-  justify-content: space-between;
-}
-
-.method {
-  display: flex;
-  flex-direction: column;
-  width: 382px;
-  height: 122px;
-  padding-top: 20px;
-  cursor: pointer;
-  border: 1px solid transparent;
-  border-radius: 2px;
-  background-color: rgb(249, 249, 249);
-  justify-content: center;
-  align-items: center;
-}
-
-.card-logos {
-  display: flex;
-  width: 150px;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.radio-input {
-  margin-top: 20px;
-}
-
-input[type='radio'] {
+.form fieldset input.input-cart-number,
+.form fieldset .select.input-cart-number {
+  width: 82px;
   display: inline-block;
+  margin-right: 8px;
 }
-.input-fields {
-  display: flex;
-  justify-content: space-between;
+.form fieldset input.input-cart-number:last-child,
+.form fieldset .select.input-cart-number:last-child {
+  margin-right: 0;
+}
+.form fieldset .select {
+  position: relative;
+}
+.form fieldset .select::after {
+  content: '';
+  border-top: 8px solid #222;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  position: absolute;
+  z-index: 2;
+  top: 14px;
+  right: 10px;
+  pointer-events: none;
+}
+.form fieldset .select select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  position: absolute;
+  padding: 0;
+  border: none;
+  width: 100%;
+  outline: none !important;
+  top: 6px;
+  left: 6px;
+  background: none;
+}
+.form fieldset .select select :-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 #000;
+}
+.form button {
+  width: 100%;
+  outline: none !important;
+  background: -webkit-gradient(linear, left top, left bottom, from(#49a09b), to(#3d8291));
+  background: linear-gradient(180deg, #49a09b, #3d8291);
+  text-transform: uppercase;
+  font-weight: bold;
+  border: none;
+  box-shadow: none;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  margin-top: 90px;
+}
+.form button .fa {
+  margin-right: 6px;
 }
 
-.input-fields label {
-  display: block;
-  margin-bottom: 10px;
-  color: #b4b4b4;
+/*--------------------
+Checkout
+--------------------*/
+.checkout {
+  margin: 150px auto 30px;
+  position: relative;
+  width: 460px;
+  background: white;
+  border-radius: 15px;
+  padding: 160px 45px 30px;
+  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
 }
 
-.info {
-  font-size: 12px;
-  font-weight: 300;
-  display: block;
-  margin-top: 50px;
-  opacity: .5;
-  color: #2e2e2e;
+/*--------------------
+Credit Card
+--------------------*/
+.credit-card-box {
+  -webkit-perspective: 1000;
+          perspective: 1000;
+  width: 400px;
+  height: 280px;
+  position: absolute;
+  top: -112px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
-
-div[class*='column'] {
-  width: 382px;
+.credit-card-box:hover .flip, .credit-card-box.hover .flip {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
-
-input[type='text'],
-input[type='password'] {
-  font-size: 16px;
+.credit-card-box .front,
+.credit-card-box .back {
+  width: 400px;
+  height: 250px;
+  border-radius: 15px;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  background: linear-gradient(135deg, #bd6772, #53223f);
+  position: absolute;
+  color: #fff;
+  font-family: Inconsolata;
+  top: 0;
+  left: 0;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.3);
+}
+.credit-card-box .front::before,
+.credit-card-box .back::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: url("http://cdn.flaticon.com/svg/44/44386.svg") no-repeat center;
+  background-size: cover;
+  opacity: .05;
+}
+.credit-card-box .flip {
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  position: relative;
+}
+.credit-card-box .logo {
+  position: absolute;
+  top: 9px;
+  right: 20px;
+  width: 60px;
+}
+.credit-card-box .logo svg {
+  width: 100%;
+  height: auto;
+  fill: #fff;
+}
+.credit-card-box .front {
+  z-index: 2;
+  -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+}
+.credit-card-box .back {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+.credit-card-box .back .logo {
+  top: 185px;
+}
+.credit-card-box .chip {
+  position: absolute;
+  width: 60px;
+  height: 45px;
+  top: 20px;
+  left: 20px;
+  background: linear-gradient(135deg, #ddccf0 0%, #d1e9f5 44%, #f8ece7 100%);
+  border-radius: 8px;
+}
+.credit-card-box .chip::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border: 4px solid rgba(128, 128, 128, 0.1);
+  width: 80%;
+  height: 70%;
+  border-radius: 5px;
+}
+.credit-card-box .strip {
+  background: linear-gradient(135deg, #404040, #1a1a1a);
+  position: absolute;
   width: 100%;
   height: 50px;
-  padding-right: 40px;
-  padding-left: 16px;
-  color: rgba(46, 46, 46, .8);
-  border: 1px solid rgb(225, 225, 225);
-  border-radius: 4px;
-  outline: none;
+  top: 30px;
+  left: 0;
 }
-
-input[type='text']:focus,
-input[type='password']:focus {
-  border-color: rgb(119, 219, 119);
+.credit-card-box .number {
+  position: absolute;
+  margin: 0 auto;
+  top: 103px;
+  left: 19px;
+  font-size: 38px;
 }
-
-#date { background: url(img/icons_calendar_black.png) no-repeat 95%; }
-#cardholder { background: url(img/icons_person_black.png) no-repeat 95%; }
-#cardnumber { background: url(img/icons_card_black.png) no-repeat 95%; }
-#verification { background: url(img/icons_lock_black.png) no-repeat 95%; }
-
-.small-inputs {
-  display: flex;
-  margin-top: 20px;
-  justify-content: space-between;
-}
-
-.small-inputs div {
-  width: 182px;
-}
-.panel-footer {
-  display: flex;
-  width: 100%;
-  height: 96px;
-  padding: 0 80px;
-  background-color: rgb(239, 239, 239);
-  justify-content: space-between;
-  align-items: center;
-}
-.btn {
-  font-size: 16px;
-  width: 163px;
-  height: 48px;
-  cursor: pointer;
-  transition: all .2s ease-in-out;
+.credit-card-box label {
+  font-size: 10px;
   letter-spacing: 1px;
-  border: none;
-  border-radius: 23px;
+  text-shadow: none;
+  text-transform: uppercase;
+  font-weight: normal;
+  opacity: 0.5;
+  display: block;
+  margin-bottom: 3px;
 }
-
-.back-btn {
-  color: #1abc9c;
+.credit-card-box .card-holder,
+.credit-card-box .card-expiration-date {
+  position: absolute;
+  margin: 0 auto;
+  top: 180px;
+  left: 19px;
+  font-size: 22px;
+  text-transform: capitalize;
+}
+.credit-card-box .card-expiration-date {
+  text-align: right;
+  left: auto;
+  right: 20px;
+}
+.credit-card-box .ccv {
+  height: 36px;
   background: #fff;
+  width: 91%;
+  border-radius: 5px;
+  top: 110px;
+  left: 0;
+  right: 0;
+  position: absolute;
+  margin: 0 auto;
+  color: #000;
+  text-align: right;
+  padding: 10px;
 }
-
-.next-btn {
+.credit-card-box .ccv label {
+  margin: -25px 0 14px;
   color: #fff;
-  background: #1abc9c;
 }
-
-.btn:focus {
-  outline: none;
-}
-
-.btn:hover {
-  transform: scale(1.1);
-}
-.blue-border {
-  border: 1px solid rgb(110, 178, 251);
-}
-.warning {
-  border-color: #1abc9c;
-}
-*{
-    margin: 0;
-    padding: 0;
-}
-.rate {
-    float: left;
-    height: 46px;
-    padding: 0 10px;
-}
-.rate:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
-}
-.rate:not(:checked) > label {
-    float:right;
-    width:1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:30px;
-    color:#ccc;
-}
-.rate:not(:checked) > label:before {
-    content: '★ ';
-}
-.rate > input:checked ~ label {
-    color: #ffc700;
-}
-.rate:not(:checked) > label:hover,
-.rate:not(:checked) > label:hover ~ label {
-    color: #deb217;
-}
-.rate > input:checked + label:hover,
-.rate > input:checked + label:hover ~ label,
-.rate > input:checked ~ label:hover,
-.rate > input:checked ~ label:hover ~ label,
-.rate > label:hover ~ input:checked ~ label {
-    color: #c59b08;
-}
-
-/* Modified from: https://github.com/mukulkant/Star-rating-using-pure-css */
