--- a/OnlineOrdering/MainApp/templates/login.html
+++ b/OnlineOrdering/MainApp/templates/login.html
@@ -38,10 +38,13 @@
 						<button type="submit" class="login100-form-btn">
 							Login
 						</button>
+						{% if status  < 1 %}
+						<div class="container-login100-form-btn m-t-32"><p style="color: red;">Validation Failed</p></div>
+						{% endif %}
+						
 				</form>
-					</div>
 					<div class="container-login100-form-btn m-t-32"><a href="{% url 'app:register' %}" style="align-self: center;">Register</a></div>	
-				</div>
+		
 		</div>
 	</div>
 	
