--- a/OnlineOrdering/MainApp/templates/membership.html
+++ b/OnlineOrdering/MainApp/templates/membership.html
@@ -27,6 +27,17 @@
             </nav>
             <h1 class="band-name band-name-large">Online Ordering</h1>
         </header>
+        {% if type == "Basic" %}
+        <hr style="background: linear-gradient(to right,black,grey);
+        height: 10px;">
+        {% elif type == "Gold" %}
+        <hr style="background: linear-gradient(to right, rgb(190, 146, 0), yellow);
+        height: 10px;">
+        {% elif type == "Platinum" %}
+        <hr style="background: linear-gradient(to right,lightgrey, darkgrey);
+        height: 10px;">
+        {% endif %}
+
     <form action="{% url 'app:membership_reg'%}" method="POST">
     <div class="container group">
         <div class="grid-1-5">
@@ -34,7 +45,7 @@
             <h3><span class="uppercase">Free</span></h3>
             <p>No Discount</p>
             <p>3 Free Delivery Monthly</p>
-            <input type="submit" value="Baisc" name = "membership" class="button"></input>
+            <input type="submit" value="Basic" name = "membership" class="button"></input>
         </div>
     </form>
     <form action="{% url 'app:membership_reg'%}" method="POST">
