--- a/OnlineOrdering/MainApp/templates/store.html
+++ b/OnlineOrdering/MainApp/templates/store.html
@@ -28,6 +28,16 @@
             </nav>
             <h1 class="band-name band-name-large">Online Ordering</h1>
         </header>
+        {% if type == "Basic" %}
+        <hr style="background: linear-gradient(to right,black,grey);
+        height: 10px;">
+        {% elif type == "Gold" %}
+        <hr style="background: linear-gradient(to right, rgb(190, 146, 0), yellow);
+        height: 10px;">
+        {% elif type == "Platinum" %}
+        <hr style="background: linear-gradient(to right,lightgrey, darkgrey);
+        height: 10px;">
+        {% endif %}
         <div class="container">
             <table id="cart" class="table table-hover table-condensed">
                             <thead>
