--- a/OnlineOrdering/MainApp/templates/Donations.html
+++ b/OnlineOrdering/MainApp/templates/Donations.html
@@ -35,6 +35,19 @@
             </nav>
             <h1 class="band-name band-name-large">Online Ordering</h1>
         </header>
+        <div>
+          {% if type == "Basic" %}
+            <hr style="background: linear-gradient(to right,black,grey);
+            height: 10px;">
+            {% elif type == "Gold" %}
+            <hr style="background: linear-gradient(to right, rgb(190, 146, 0), yellow);
+            height: 10px;">
+            {% elif type == "Platinum" %}
+            <hr style="background: linear-gradient(to right,lightgrey, darkgrey);
+            height: 10px;">
+            {% endif %}
+          </div>
+          <section>
     <form action="{% url 'app:donations'%}" method="POST">
         <div class="form-row">
             <div class="form-group col-md-6">
@@ -78,5 +91,6 @@
           </div>
     </div>
     {% endif %}
+  </section>
 </body>
 </html>
