--- a/OnlineOrdering/MainApp/templates/Register.html
+++ b/OnlineOrdering/MainApp/templates/Register.html
@@ -35,14 +35,19 @@
 						<input class="input100" type="password" name="password" id="password" placeholder="Password"required="required" >
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
 					</div>
-					
 					<div class="wrap-input100 validate-input" data-validate = "Mobile No.">
 						<input class="input100" type="text" name="mobile" id="mobile" placeholder="Mobile No." required="required">
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
-						<div class="wrap-input100 validate-input" data-validate = "Mobile No.">
-							<input class="input100" type="text" name="secQue" id="secQue" placeholder="Security Question" required="required">
-							<span class="focus-input100" data-placeholder="&#xe82a;"></span>
 					</div>
+					<div class="wrap-input100 validate-input">
+						<input class="input100" type="text" name="question" id="question" placeholder="Security Question"required="required" >
+						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
+					</div>
+						<div class="wrap-input100 validate-input">
+							<input class="input100" type="text" name="ans" id="ans" placeholder="Answer" required="required">
+							<span class="focus-input100" data-placeholder="&#xe80f;"></span>
+					</div>
+					
 					<div class="container-login100-form-btn m-t-32">
 						<button type="submit" class="login100-form-btn">
 							Register
