--- a/OnlineOrdering/MainApp/templates/address.html
+++ b/OnlineOrdering/MainApp/templates/address.html
@@ -30,6 +30,17 @@
         </nav>
         <h1 class="band-name band-name-large">Online Ordering</h1>
     </header>
+    {% if type == "Basic" %}
+    <hr style="background: linear-gradient(to right,black,grey);
+    height: 10px;">
+    {% elif type == "Gold" %}
+    <hr style="background: linear-gradient(to right, rgb(190, 146, 0), yellow);
+    height: 10px;">
+    {% elif type == "Platinum" %}
+    <hr style="background: linear-gradient(to right,lightgrey, darkgrey);
+    height: 10px;">
+    {% endif %}
+
 <form action="{% url 'app:checkout' %}" method="POST">
     <div class="form-row">
       <div class="form-group col-md-6">
