--- a/OnlineOrdering/MainApp/templates/login.html
+++ b/OnlineOrdering/MainApp/templates/login.html
@@ -43,7 +43,11 @@
 						{% endif %}
 						
 				</form>
-					<div class="container-login100-form-btn m-t-32"><a href="{% url 'app:register' %}" style="align-self: center;">Register</a></div>	
+				<div class="container-login100-form-btn m-t-32">
+					<a type="submit" class="login100-form-btn" href="{% url 'app:register' %}">
+						Register
+					</a>
+					<div class="container-login100-form-btn m-t-32"><a href="{% url 'app:forgot' %}" style="align-self: center;">Forgot Password?</a></div>
 		
 		</div>
 	</div>
